# portolake

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  e2e.yml  publish.yml  tests.yml
docs/: contributing.md  index.md
docs/reference/: api.md  cli.md  configuration.md
portolake/: __init__.py  backend.py  config.py  export.py  iceberg_metadata.py  iceberg_rest_catalog.py  namespace_utils.py  sdi_catalog.py  spatial.py  stac_generator.py  versioning.py
portolake/stac_extension/: schema.json
tests/: conftest.py  test_backend.py  test_config.py  test_entry_point.py  test_export.py  test_iceberg_metadata.py  test_iceberg_native.py  test_iceberg_rest_catalog.py  test_import.py  test_namespace_utils.py  test_on_post_add.py  test_push_support.py  test_sdi_catalog.py  test_spatial.py  test_spatial_integration.py  test_stac_generator.py  test_versioning.py
tests/e2e/: conftest.py  test_concurrent_access.py  test_rest_catalog_workflow.py  test_s3_storage.py
tests/integration/: conftest.py  test_cli_add_iceberg.py  test_cli_version_commands.py  test_error_handling.py  test_export_after_add.py  test_spatial_cli_integration.py  test_stac_metadata_integration.py
