[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portolake"
version = "0.1.0"
description = "Lakehouse-grade versioning for Portolan catalogs "
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Nissim Lebovits", email = "nlebovits@pm.me" }
]
keywords = ["geospatial", "data lake", "versioning", "catalog", "metadata", "lakehouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geoparquet-io>=0.9.0",
    "click>=8.0.0",
    "pyarrow>=12.0.0,<22.0.0",  # v22+ has ABI incompatibility with abseil on some systems
]

[project.urls]
"Homepage" = "https://github.com/portolan-sdi/portolake"
"Bug Tracker" = "https://github.com/portolan-sdi/portolake/issues"
"Documentation" = "https://portolan-sdi.github.io/portolake/"
"Source" = "https://github.com/portolan-sdi/portolake"

[project.optional-dependencies]
dev = [
    "commitizen>=4.0.0",
    "pip-audit>=2.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["portolake"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["portolake"]